--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -31,8 +31,8 @@
   </div>
 
   <div>
-    <strong>Maximum Off-Target Fixations:</strong>
-    {{formatNumber analysis.maxOffTargetFixations}}
+    <strong>Maximum Off-Stimulus Fixations:</strong>
+    {{formatNumber analysis.maxOffStimulusFixations}}
   </div>
 
   <div class="selector-set">
